# hwt

./: .gitignore  CMakeLists.txt  README.md  results.txt
include/: SearchNode-Copy1.h  SearchNode.h  node.h  nodeops.h  preprocessing.h  root_node.h
interface/: hwt_interface.cpp
src/: Preprocessing.cpp  node.cpp  root_node.cpp
